[www.hlidacshopu.cz] Updated How to read Chart image

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -98,20 +98,20 @@
         <h2>Jak Hlídač Shopů vypadá a jak číst graf?</h2>
         <picture>
           <source media="screen and (max-width: 479px)"
-                  srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_420/v1572535440/www.hlidacshopu.cz/jak-cist-graf-mobile.png 1x,
-                          https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_420/v1572535440/www.hlidacshopu.cz/jak-cist-graf-mobile.png 1.5x,
-                          https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_420/v1572535440/www.hlidacshopu.cz/jak-cist-graf-mobile.png 2x,">
+                  srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_420/v1572766113/www.hlidacshopu.cz/jak-cist-graf-mobile.png 1x,
+                          https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_420/v1572766113/www.hlidacshopu.cz/jak-cist-graf-mobile.png 1.5x,
+                          https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_420/v1572766113/www.hlidacshopu.cz/jak-cist-graf-mobile.png 2x,">
           <source media="screen and (min-width: 480px) and (max-width: 879px)"
-                  srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_740/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 1x,
-                          https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_740/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 1.5x,
-                          https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_740/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 2x">
+                  srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_740/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 1x,
+                          https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_740/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 1.5x,
+                          https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_740/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 2x">
           <source media="screen and (min-width: 840px)"
-                  srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 1x,
-                          https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 1.5x,
-                          https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png 2x">
+                  srcset="https://res.cloudinary.com/topmonks/image/upload/dpr_1,q_auto,f_auto,w_1008/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 1x,
+                          https://res.cloudinary.com/topmonks/image/upload/dpr_1.5,q_auto,f_auto,w_1008/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 1.5x,
+                          https://res.cloudinary.com/topmonks/image/upload/dpr_2,q_auto,f_auto,w_1008/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png 2x">
           <img loading="lazy"
                alt="Jak Hlídač Shopů vypadá a jak číst graf?"
-               src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572499144/www.hlidacshopu.cz/jak-cist-graf.png"
+               src="https://res.cloudinary.com/topmonks/image/upload/dpr_auto,q_auto,f_auto,w_auto/v1572766092/www.hlidacshopu.cz/jak-cist-graf.png"
                width="100%">
         </picture>
         <p>Hlídač Shopů si můžete <b>nainstalovat přímo do svého prohlížeče</b> a
@@ -626,11 +626,11 @@
     return html`
       <div id="hlidac-shopu-modal__loader" class="result mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Pracuji&hellip;</h2>
+          <h2>Ověřuji&hellip;</h2>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 box box--purple">
           <div class=loading-container>
-            <div class=loader aria-label="Načítám data…">Načítám data&hellip;</div>
+            <div class=loader aria-label="Načítám data…">Váš požadavek se zpracovává&hellip;</div>
           </div>
         </div>
       </div>
