--- a/www.hlidacshopu.cz/src/html/macros/helpers.html
+++ b/www.hlidacshopu.cz/src/html/macros/helpers.html
@@ -1,6 +1,9 @@
 {% macro sprite(id, altText, viewBox, classes) %}
 {% set viewBox = viewBox or "0 0 1 1"%}
-<span class='sprite -{{id}} {{classes}}'>
-  <svg viewBox="{{viewBox}}" alt="{{altText}}"><use xlink:href='/assets/img/icons.svg#{{id}}'></use></svg>
+<span class='sprite sprite--{{id}} {{classes}}'>
+  <svg viewBox="{{viewBox}}">
+    <title>{{altText}}</title>
+    <use xlink:href="/assets/img/icons.svg#{{id}}"></use>
+  </svg>
 </span>
 {% endmacro %}
