[www.hlidacshopu.cz] Enable static assets caching

--- a/www.hlidacshopu.cz/src/html/media/index.html
+++ b/www.hlidacshopu.cz/src/html/media/index.html
@@ -2,7 +2,7 @@
 {% block title %}Hlídač shopů v médiích{% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="/stylesheets/media.css">
+<link rel="stylesheet" href="/assets/css/media.css">
 {% endblock %}
 
 {% block main %}
@@ -15,7 +15,7 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
+              <img src="/assets/img/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--press">Tisková zpráva</span>
             </div>
           </div>
@@ -35,7 +35,7 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
+              <img src="/assets/img/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--about-us">Napsali o&nbsp;nás</span>
             </div>
           </div>
@@ -55,7 +55,7 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
+              <img src="/assets/img/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--about-us">Napsali o&nbsp;nás</span>
             </div>
           </div>
@@ -75,7 +75,7 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
+              <img src="/assets/img/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
             </div>
           </div>
           <div
@@ -129,7 +129,7 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
+              <img src="/assets/img/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--press">
                 Tisková zpráva
               </span>
@@ -151,7 +151,7 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
+              <img src="/assets/img/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--about-us">
                 Napsali o nás
               </span>
@@ -173,7 +173,7 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
+              <img src="/assets/img/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
               <span class="media-article-item__image-tag media-tag--about-us">
                 Napsali o nás
               </span>
@@ -195,7 +195,7 @@
           <div
             class=" mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-3-desktop">
             <div class="media-article-item__image">
-              <img src="/images/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
+              <img src="/assets/img/black-friday-slevy-e-commerce-1-prev-1.png" alt="clanek"/>
             </div>
           </div>
           <div
