--- a/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
+++ b/www.hlidacshopu.cz/src/html/proc-to-delame/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/master.html' %}
 {% block title %}Proč děláme Hlídač shopů{% endblock %}
 
-{% block main %}
+{% block styles %}
 <style>
   .our-aim a {
     color: #2F80ED;
@@ -30,6 +30,9 @@
     color: #FF8787;
   }
 </style>
+{% endblock %}
+
+{% block main %}
 <section class="our-aim">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
