--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -82,9 +82,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12">
         <h2 class="sub-title">HLÍDAČ SHOPŮ VÁM PŘINÁŠÍ</h2>
         <div class="logos">
-          <a href="https://apify.com/"><img src="/images/logos/apify_logo.svg" alt="Apify" height="40"></a>
-          <a href="https://www.keboola.com/"><img src="/images/logos/keboola_logo.svg" alt="Keboola" height="40"></a>
-          <a href="https://www.topmonks.cz/"><img src="/images/logos/topmonks_logo.svg" alt="TopMonks" height="40"></a>
+          <a href="https://apify.com/"><img src="/assets/img/logos/apify_logo.svg" alt="Apify" height="40"></a>
+          <a href="https://www.keboola.com/"><img src="/assets/img/logos/keboola_logo.svg" alt="Keboola" height="40"></a>
+          <a href="https://www.topmonks.cz/"><img src="/assets/img/logos/topmonks_logo.svg" alt="TopMonks" height="40"></a>
         </div>
       </div>
     </div>
@@ -131,22 +131,22 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 browser-list">
         <div class="browser-support">
           <div class="browser-support__icon">
-            <img loading="lazy" src="/images/chrome.svg" alt="Barevná ikona prohlížeče Google Chrome"></div>
+            <img loading="lazy" src="/assets/img/chrome.svg" alt="Barevná ikona prohlížeče Google Chrome"></div>
           <p class="sub-info--grey">Podporujeme<br>prohlížeč Google&nbsp;Chrome</p>
         </div>
         <div class="browser-support">
           <div class="browser-support__icon browser-support__icon--disabled">
-            <img loading="lazy" src="/images/firefox.svg" alt="Barevná ikona prohlížeče Firefox"></div>
+            <img loading="lazy" src="/assets/img/firefox.svg" alt="Barevná ikona prohlížeče Firefox"></div>
           <p class="sub-info--grey">Brzy podpora pro<br>prohlížeč Firefox</p>
         </div>
         <div class="browser-support">
           <div class="browser-support__icon browser-support__icon--disabled">
-            <img loading="lazy" src="/images/brave.svg" alt="Šedá ikona prohlížeče Brave"></div>
+            <img loading="lazy" src="/assets/img/brave.svg" alt="Šedá ikona prohlížeče Brave"></div>
           <p class="sub-info--grey">Brzy podpora pro<br>prohlížeč Brave</p>
         </div>
         <div class="browser-support">
           <div class="browser-support__icon browser-support__icon--disabled">
-            <img src="/images/edge.svg" alt="Šedá ikona prohlížeče Microsoft Edge"></div>
+            <img src="/assets/img/edge.svg" alt="Šedá ikona prohlížeče Microsoft Edge"></div>
           <p class="sub-info--grey">Brzy podpora pro<br>prohlížeč Microsoft&nbsp;Edge</p>
         </div>
       </div>
