[www.hlidacshopu.cz] Hide modal on click to closables

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -534,6 +534,7 @@
     const target = e.target;
     if (haveToCloseModal(target)) {
       history.pushState({showModal: false}, null, "/");
+      hideResultsModal();
     }
   });
 
